[project]
name = "tokens-mcp"
version = "0.1.0"
description = "MCP server for token-metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.6.0",
    "pycomfort>=0.0.18",
    "tmai-api>=0.4.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
]
authors = [
    {name = "Anton Kulaga", email = "antonkulaga@gmail.com"},
    {name = "Livia Zaharia", email = "liviazaharia2020@gmail.com"}
]
maintainers = [
    {name = "Anton Kulaga", email = "antonkulaga@gmail.com"}
]